--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Git e Github</title>
 </head>
 <body>
-    <h1>Ol· Git e GitHub NO VsCode</h1>
+    <h1>Ol√° Git e GitHub no VsCode</h1>
+    <p>Alterado no GitHub</p>
 </body>
 </html>
